# HTDML-Latent-DTM-Experiments

./: .gitignore  PINS.md  README.md  conftest.py  env-h200-freeze.txt  pyproject.toml
experiments/exp1-paid-cal-artifact/: README.md  report.md
experiments/exp2-cal-gate-fix/: report.md
experiments/exp2-cal-gate-fix/artifacts/: .gitkeep  report.md  run_stage_c.json
experiments/exp2-cal-gate-fix/artifacts/checkpoints/seed2/stage_b/: manifest.json
experiments/exp3-lambda-sweep/: report.md
experiments/exp3-lambda-sweep/artifacts/checkpoints/seed1/stage_b/: manifest.json
experiments/exp3-lambda-sweep/artifacts/lam0.1/: run_stage_c.json
experiments/exp3-lambda-sweep/artifacts/lam0.3/: report.md  run_stage_c.json
experiments/exp3-lambda-sweep/artifacts/lam0.5/: report.md  run_stage_c.json
harness/: __init__.py  probe_primitives.py  reversible_scan.py  selfadjoint_cert.py
results/: run_stage_c.json
scripts/: __init__.py  calib_logic.py  calibrate_epoch_cost.py  dataset_gate.py  run_stage_c.py  smoke.py  smoke_common.py  wandb_fix_provenance.py  wandb_import.py
src/htdml/: __init__.py  autoencoder.py  compatibility.py  driver.py  latent_adapter.py  latent_dtm.py  orchestrator.py  paths.py  trainability_probe.py
tests/: fixture_6_4.py  test_autoencoder.py  test_calib_logic.py  test_dataset_gate.py  test_driver.py  test_isolation.py  test_latent_adapter.py  test_latent_dtm.py  test_orchestrator.py  test_probe_primitives.py  test_reversible_kernel.py  test_run_stage_c_script.py  test_stage_b_checkpoint.py  test_trainability_probe.py  test_wandb_import.py  test_wandb_provenance.py  zero_compute_checks.py
